changed some text content, fixed image resizing issues and added custom scrollbar on the right ot the page.

--- a/src/App.css
+++ b/src/App.css
@@ -36,15 +36,49 @@
 
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-html::-webkit-scrollbar {
+/* html::-webkit-scrollbar {
   display: none;
-}
+} */
 
 /* Hide scrollbar for IE, Edge, and Firefox */
-html {
+/* html {
   -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+ /* scrollbar-width: none;  /* Firefox 
+}  */
+
+
+::-webkit-scrollbar {
+
+  width: 10px;
+  background-color: #201e1e;
 }
+
+::webkit-scrollbar-track {
+
+  background-color: #201e1e;
+
+}
+
+::-webkit-scrollbar-thumb {
+
+  height: 2px;
+  width: 8px;
+  border-radius: 10px;
+  border: 2px solid #201e1e;
+  background: #555;
+
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #48a5be;
+}
+
+/* For IE and Edge */
+* {
+  -ms-overflow-style: auto;
+}
+
 
 .App-link {
   color: #61dafb;
@@ -171,8 +205,7 @@ body {
 
     align-items: center;
     justify-content: center;
-    margin: 10 auto;
-    margin-bottom: 50px;
+    margin: 0 auto 50px;
 
   }
 
@@ -191,6 +224,7 @@ body {
     align-items: center;
     margin-bottom: 50px;
     flex-direction: column;
+
 
   }
 
@@ -321,6 +355,7 @@ body {
   color: #61dafb;
   font-family: 'Overpass', sans-serif;
   margin: 10px;
+  text-align: center;
   
 }
 
@@ -432,22 +467,25 @@ body {
   justify-content: center;
   padding: 10px;
   align-items: center;
-  width: 60%;
+  width: 65%;
   margin: 10px auto;
-  box-sizing: border-box; 
 }
 
 
 .profile {
 
+  width: 150px;
+  height: 150px;
   display: flex;
   align-items: center;
-  border: 2px solid transparent;
   border-radius: 75%;
   justify-content: center;
-  margin-right: 60px;
+  margin: 0px auto 50px;
+  border: 2px solid transparent;
 
 }
+
+
 
 .profile_Desc {
 
@@ -502,6 +540,7 @@ body {
   justify-content: center;
   border: 2px solid transparent;
 
+
 }
 
 .Project_card {
@@ -555,13 +594,12 @@ body {
 
     font-size: 16px;
     max-width: 100%;
+
   }
  
   .profile {
 
-    margin: 10 auto;
-    height: 160px;
-    width: 160px;
+    margin: 0 auto 50px;
 
   }
 
